Fix broken layout and appearance

--- a/packages/tweakpane/src/doc/sass/components/_code-block.scss
+++ b/packages/tweakpane/src/doc/sass/components/_code-block.scss
@@ -1,5 +1,4 @@
 .codeBlock {
-	border-radius: 6px;
 	position: relative;
 
 	pre {
